@@ -1,9 +1,11 @@
 package datawave.query;
 
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
+
 import java.text.DateFormat;
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -18,6 +20,7 @@ import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.security.Authorizations;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 import org.jboss.arquillian.container.test.api.Deployment;
@@ -26,13 +29,10 @@ import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.asset.StringAsset;
 import org.jboss.shrinkwrap.api.spec.JavaArchive;
 import org.junit.AfterClass;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-
-import com.google.common.collect.Sets;
 
 import datawave.configuration.spring.SpringBean;
 import datawave.core.query.configuration.GenericQueryConfiguration;
@@ -53,13 +53,18 @@ import datawave.webservice.edgedictionary.RemoteEdgeDictionary;
 public abstract class ExcerptTest {
 
     @RunWith(Arquillian.class)
-    public static class ShardRange extends datawave.query.ExcerptTest {
+    public static class ShardRangeTest extends datawave.query.ExcerptTest {
         protected static AccumuloClient connector = null;
+
+        @Override
+        protected void runTestQuery(String queryString) throws Exception {
+            super.runTestQuery(connector, queryString);
+        }
 
         @BeforeClass
         public static void setUp() throws Exception {
 
-            QueryTestTableHelper qtth = new QueryTestTableHelper(ShardRange.class.toString(), log);
+            QueryTestTableHelper qtth = new QueryTestTableHelper(ShardRangeTest.class.toString(), log);
             connector = qtth.client;
             WiseGuysIngest.writeItAll(connector, WiseGuysIngest.WhatKindaRange.SHARD);
             Authorizations auths = new Authorizations("ALL");
@@ -68,21 +73,21 @@ public abstract class ExcerptTest {
             PrintUtility.printTable(connector, auths, QueryTestTableHelper.MODEL_TABLE_NAME);
         }
 
-        @Override
-        protected void runTestQuery(String queryString, Date startDate, Date endDate, Map<String,String> extraParms, Collection<String> goodResults)
-                        throws Exception {
-            super.runTestQuery(connector, queryString, startDate, endDate, extraParms, goodResults);
-        }
     }
 
     @RunWith(Arquillian.class)
-    public static class DocumentRange extends datawave.query.ExcerptTest {
+    public static class DocumentRangeTest extends datawave.query.ExcerptTest {
         protected static AccumuloClient connector = null;
+
+        @Override
+        protected void runTestQuery(String queryString) throws Exception {
+            super.runTestQuery(connector, queryString);
+        }
 
         @BeforeClass
         public static void setUp() throws Exception {
 
-            QueryTestTableHelper qtth = new QueryTestTableHelper(DocumentRange.class.toString(), log);
+            QueryTestTableHelper qtth = new QueryTestTableHelper(DocumentRangeTest.class.toString(), log);
             connector = qtth.client;
 
             WiseGuysIngest.writeItAll(connector, WiseGuysIngest.WhatKindaRange.DOCUMENT);
@@ -92,18 +97,13 @@ public abstract class ExcerptTest {
             PrintUtility.printTable(connector, auths, QueryTestTableHelper.MODEL_TABLE_NAME);
         }
 
-        @Override
-        protected void runTestQuery(String queryString, Date startDate, Date endDate, Map<String,String> extraParms, Collection<String> goodResults)
-                        throws Exception {
-            super.runTestQuery(connector, queryString, startDate, endDate, extraParms, goodResults);
-        }
     }
 
     private static final Logger log = Logger.getLogger(datawave.query.ExcerptTest.class);
 
     protected Authorizations auths = new Authorizations("ALL");
 
-    protected Set<Authorizations> authSet = Collections.singleton(auths);
+    protected Set<Authorizations> authSet = Set.of(auths);
 
     @Inject
     @SpringBean(name = "EventQuery")
@@ -112,6 +112,11 @@ public abstract class ExcerptTest {
     protected KryoDocumentDeserializer deserializer;
 
     private final DateFormat format = new SimpleDateFormat("yyyyMMdd");
+    private Date startDate;
+    private Date endDate;
+
+    private final Map<String,String> extraParameters = new HashMap<>();
+    private final Set<String> expectedResults = new HashSet<>();
 
     @Deployment
     public static JavaArchive createDeployment() throws Exception {
@@ -132,18 +137,46 @@ public abstract class ExcerptTest {
     }
 
     @Before
-    public void setup() {
+    public void setup() throws ParseException {
         TimeZone.setDefault(TimeZone.getTimeZone("GMT"));
         log.setLevel(Level.TRACE);
         logic.setFullTableScanEnabled(true);
         deserializer = new KryoDocumentDeserializer();
+        startDate = format.parse("19000101");
+        endDate = format.parse("20240101");
+        extraParameters.clear();
+        expectedResults.clear();
     }
 
-    protected abstract void runTestQuery(String queryString, Date startDate, Date endDate, Map<String,String> extraParms, Collection<String> goodResults)
-                    throws Exception;
+    protected void setDefaultQueryParams() {
+        extraParameters.put("include.grouping.context", "true");
+        extraParameters.put("hit.list", "true");
+        extraParameters.put("return.fields", "HIT_EXCERPT");
+        extraParameters.put("query.syntax", "LUCENE");
+    }
 
-    protected void runTestQuery(AccumuloClient connector, String queryString, Date startDate, Date endDate, Map<String,String> extraParms,
-                    Collection<String> goodResults) throws Exception {
+    protected void updateQueryParam(String key, String value) {
+        if (StringUtils.isNoneBlank(key, value)) {
+            extraParameters.put(key, value);
+        }
+    }
+
+    protected void addExpectedResult(String result) {
+        if (StringUtils.isNotBlank(result)) {
+            expectedResults.add(result);
+        }
+    }
+
+    protected boolean initialized() {
+        return !(extraParameters.isEmpty() || expectedResults.isEmpty());
+    }
+
+    protected abstract void runTestQuery(String queryString) throws Exception;
+
+    protected void runTestQuery(AccumuloClient connector, String queryString) throws Exception {
+        if (!initialized()) {
+            throw new Exception("must set query parameters and expected results before running query");
+        }
 
         QueryImpl settings = new QueryImpl();
         settings.setBeginDate(startDate);
@@ -151,7 +184,7 @@ public abstract class ExcerptTest {
         settings.setPagesize(Integer.MAX_VALUE);
         settings.setQueryAuthorizations(auths.serialize());
         settings.setQuery(queryString);
-        settings.setParameters(extraParms);
+        settings.setParameters(extraParameters);
         settings.setId(UUID.randomUUID());
 
         log.debug("query: " + settings.getQuery());
@@ -181,7 +214,7 @@ public abstract class ExcerptTest {
                 if (attribute instanceof Attributes) {
                     for (Attribute attr : ((Attributes) attribute).getAttributes()) {
                         String toFind = dictionaryEntry.getKey() + ":" + attr;
-                        boolean found = goodResults.remove(toFind);
+                        boolean found = expectedResults.remove(toFind);
                         if (found)
                             log.debug("removed " + toFind);
                         else {
@@ -192,7 +225,7 @@ public abstract class ExcerptTest {
 
                     String toFind = dictionaryEntry.getKey() + ":" + dictionaryEntry.getValue();
 
-                    boolean found = goodResults.remove(toFind);
+                    boolean found = expectedResults.remove(toFind);
                     if (found)
                         log.debug("removed " + toFind);
                     else {
@@ -203,210 +236,164 @@ public abstract class ExcerptTest {
             }
         }
 
-        Assert.assertTrue("unexpected fields returned: " + unexpectedFields.toString(), unexpectedFields.isEmpty());
-        Assert.assertTrue(goodResults + " was not empty", goodResults.isEmpty());
+        assertTrue("unexpected fields returned: " + unexpectedFields, unexpectedFields.isEmpty());
+        assertTrue(expectedResults + " was not empty", expectedResults.isEmpty());
 
-        Assert.assertFalse("No docs were returned!", docs.isEmpty());
+        assertFalse("No docs were returned!", docs.isEmpty());
     }
 
     @Test
     public void simpleTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(farther) #EXCERPT_FIELDS(QUOTE/2)";
 
         // not sure why the timestamp and delete flag are present
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:get much [farther] with a: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:get much [farther] with a: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void simpleTestBefore() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(farther) #EXCERPT_FIELDS(QUOTE/2/before)";
 
         // not sure why the timestamp and delete flag are present
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:get much [farther]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:get much [farther]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void simpleTestAfter() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(farther) #EXCERPT_FIELDS(QUOTE/2/after)";
 
         // not sure why the timestamp and delete flag are present
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:[farther] with a: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:[farther] with a: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void lessSimpleBeforeTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(he cant refuse) #EXCERPT_FIELDS(QUOTE/2/before)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void lessSimpleAfterTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(he cant refuse) #EXCERPT_FIELDS(QUOTE/2/after)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:[he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:[he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void lessSimpleTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(he cant refuse) #EXCERPT_FIELDS(QUOTE/2)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void biggerRangeThanQuoteLength() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(he cant refuse) #EXCERPT_FIELDS(QUOTE/20)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:im gonna make him an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:im gonna make him an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void biggerRangeThanQuoteLengthBeforeTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(he cant refuse) #EXCERPT_FIELDS(QUOTE/20/before)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:im gonna make him an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:im gonna make him an offer [he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void biggerRangeThanQuoteLengthAfterTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(he cant refuse) #EXCERPT_FIELDS(QUOTE/20/after)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:[he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:[he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void wholeQuote() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
 
         String queryString = "QUOTE:(im gonna make him an offer he cant refuse) #EXCERPT_FIELDS(QUOTE/20)";
 
-        Set<String> goodResults = Sets.newHashSet("HIT_EXCERPT:[im] [gonna] [make] [him] [an] [offer] [he] [cant] [refuse]: : [] 9223372036854775807 false");
+        addExpectedResult("HIT_EXCERPT:[im] [gonna] [make] [him] [an] [offer] [he] [cant] [refuse]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void anotherFirstTerm() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT,UUID");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
+        updateQueryParam("return.fields", "HIT_EXCERPT,UUID");
 
         // "if" is the first term for one event
         String queryString = "QUOTE:(if) #EXCERPT_FIELDS(QUOTE/3)";
 
-        Set<String> goodResults = Sets.newHashSet("UUID.0:SOPRANO", "HIT_EXCERPT:[if] you can quote: : [] 9223372036854775807 false");
+        addExpectedResult("UUID.0:SOPRANO");
+        addExpectedResult("HIT_EXCERPT:[if] you can quote: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void anotherFirstTermBeforeTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT,UUID");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
+        updateQueryParam("return.fields", "HIT_EXCERPT,UUID");
 
         // "if" is the first term for one event
         String queryString = "QUOTE:(if) #EXCERPT_FIELDS(QUOTE/3/before)";
 
-        Set<String> goodResults = Sets.newHashSet("UUID.0:SOPRANO", "HIT_EXCERPT:[if]: : [] 9223372036854775807 false");
+        addExpectedResult("UUID.0:SOPRANO");
+        addExpectedResult("HIT_EXCERPT:[if]: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 
     @Test
     public void anotherFirstTermAfterTest() throws Exception {
-        Map<String,String> extraParameters = new HashMap<>();
-        extraParameters.put("include.grouping.context", "true");
-        extraParameters.put("hit.list", "true");
-        extraParameters.put("return.fields", "HIT_EXCERPT,UUID");
-        extraParameters.put("query.syntax", "LUCENE");
+        setDefaultQueryParams();
+        updateQueryParam("return.fields", "HIT_EXCERPT,UUID");
 
         // "if" is the first term for one event
         String queryString = "QUOTE:(if) #EXCERPT_FIELDS(QUOTE/3/after)";
 
-        Set<String> goodResults = Sets.newHashSet("UUID.0:SOPRANO", "HIT_EXCERPT:[if] you can quote: : [] 9223372036854775807 false");
+        addExpectedResult("UUID.0:SOPRANO");
+        addExpectedResult("HIT_EXCERPT:[if] you can quote: : [] 9223372036854775807 false");
 
-        runTestQuery(queryString, format.parse("19000101"), format.parse("20240101"), extraParameters, goodResults);
+        runTestQuery(queryString);
     }
 }
